Prevent author field within Article component wrapping

--- a/src/assets/scss/partial-styles/Article.scss
+++ b/src/assets/scss/partial-styles/Article.scss
@@ -59,6 +59,7 @@
     padding-left: 20px;
     padding-right: 30px;
     margin-bottom: 0px !important;
+    white-space: nowrap!important;
   }
 
   &__primary-background {
